# ytcli

./: .gitignore  CLAUDE.md  SPEC.md  pyproject.toml
tests/: conftest.py  test_analytics.py  test_analyzer.py  test_api.py  test_channel.py  test_compete.py  test_create.py  test_download.py  test_exit_codes.py  test_scaffold.py
ytcli/: __init__.py  cli.py
ytcli/commands/: analytics.py  channel.py  compete.py  create.py  download.py
ytcli/core/: analyzer.py  api.py  db.py  output.py  scraper.py  utils.py
ytcli/skills/: analytics-deep-dive.md  channel-tracking.md  competitor-analysis.md  content-ideation.md  download-pipeline.md  niche-discovery.md  quick-reference.md
